--- a/user/src/main/resources/application.yml
+++ b/user/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
 
 server:
   port: 9090
+logging:
+  file:
+    name: logs/${spring.application.name}.log
+  logback:
+    rolling policy:
+      max-file-size: 5MB
+      max-history: 7
